fix height flickering

--- a/app/assets/stylesheets/pages/p-tests/news.sass
+++ b/app/assets/stylesheets/pages/p-tests/news.sass
@@ -34,7 +34,8 @@
 
   .generated-news-line
     display: flex
-    margin-bottom: 20px
+    height: 56px // to prevent height flickering when anime poster is loading
+    margin-bottom: 12px
 
     .poster
       padding-left: 10px
